# Sledilka

./: Code  PKGBUILD  README.md  README_ru.md  Sledilka 1.0  Sledilka.py  Sledilka_1.0.py  setup.bat  setup.py  setup.sh
docs/: Создание настройки.txt
scripts/: PKGBUILD  m_os_setup.sh  setup.py  setup.sh
src/: Sledilka.py  base_functions.py  file_operations.py  limit_operations.py  paths.py  pyproject.toml  test.py
src/Sledilka/: Sledilka.py  limit_operations.py
src/Sledilka/Translations/: English.sltr
src/Translations/: English.sltr  Русский.sltr
